#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT(gvirtus-opengl, 01-beta2, http://osl.uniparthenope.it/mailman/listinfo/gvirtus-devel)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([frontend/GL.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

AC_ARG_WITH([gvirtus-include], [AC_HELP_STRING([--with-gvirtus-include=PATH],
    [set PATH to the GVirtuS include directory])], [
    GVIRTUS_INCLUDE="$withval"
    GVIRTUS_FLAGS="-I$GVIRTUS_INCLUDE"
], [
    GVIRTUS_FLAGS="$GVIRTUS_FLAGS -I${prefix}/include/gvirtus"
    GVIRTUS_FLAGS="$GVIRTUS_FLAGS -I/usr/local/gvirtus/include/gvirtus"
    GVIRTUS_FLAGS="$GVIRTUS_FLAGS -I/opt/gvirtus/include/gvirtus"
])
CPPFLAGS="$CPPFLAGS $GVIRTUS_FLAGS"

AC_ARG_WITH([gvirtus-lib], [AC_HELP_STRING([--with-gvirtus-lib=PATH],
    [set PATH to the GVirtuS library directory])],
    [
    GVIRTUS_LIB_DIR=$withval
    GVIRTUS_LIB_FLAGS="-L$withval"
], [
    GVIRTUS_LIB_FLAGS="-L${prefix}/lib"
    GVIRTUS_LIB_FLAGS="$GVIRTUS_LIB_FLAGS -L/usr/local/gvirtus/lib"
    GVIRTUS_LIB_FLAGS="$GVIRTUS_LIB_FLAGS -L/opt/gvirtus/lib"
])
LDFLAGS="$LDFLAGS $GVIRTUS_LIB_FLAGS"
AC_SUBST(GVIRTUS_LIB_FLAGS)

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h netinet/in.h stdint.h stdlib.h sys/socket.h unistd.h vmci/vmci_sockets.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_UINT64_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([gethostbyname memmove memset socket strcasecmp strdup strtoul])

CXXFLAGS="$CXXFLAGS -Wall -pedantic -Werror"

AC_CONFIG_FILES([Makefile
                 backend/Makefile
                 frontend/Makefile
		])
AC_OUTPUT
