frontendlibdir = $(libdir)/frontend
frontendlib_LTLIBRARIES = libGL.la
libGL_la_SOURCES = \
GL.cpp\
GL.h\
GL_a.cpp\
GL_b.cpp\
GL_c.cpp\
GL_d.cpp\
GL_e.cpp\
GL_f.cpp\
GL_g.cpp\
GL_i.cpp\
GL_l.cpp\
GL_m.cpp\
GL_n.cpp\
GL_o.cpp\
GL_p.cpp\
GL_r.cpp\
GL_s.cpp\
GL_t.cpp\
GL_u.cpp\
GL_unsupported.cpp\
GL_unsupported.h\
GL_v.cpp\
GL_x.cpp

libGL_la_LIBADD = -lgvirtus-frontend -lpthread
libGL_la_LDFLAGS = -version-info 1


